--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "db:connect": "docker exec -ti iluvcoffee_db_1 psql -h localhost -p 5432 -U postgres -d postgres"
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
